--- a/notebooks/ML Pipeline Preparation.ipynb
+++ b/notebooks/ML Pipeline Preparation.ipynb
@@ -482,11 +482,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 45,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-09-30T05:02:36.707050Z",
-     "start_time": "2018-09-30T05:02:17.165232Z"
+     "end_time": "2018-09-30T05:43:54.123116Z",
+     "start_time": "2018-09-30T05:43:35.315648Z"
     },
     "scrolled": false
    },
@@ -495,7 +495,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "---- Classification Report/n\n",
+      "---- Classification Report\n",
+      "\n",
       "Label: related\n",
       "             precision    recall  f1-score   support\n",
       "\n",
@@ -791,7 +792,7 @@
     "# predict on test data\n",
     "y_pred = pipeline.predict(X_test)\n",
     "\n",
-    "print(\"---- Classification Report/n\")\n",
+    "print(\"---- Classification Report\\n\")\n",
     "for i in range(len(category_names)):\n",
     "    print(\"Label:\", category_names[i])\n",
     "\n",
